:tada: Projeto PokéAPI

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header>
         <div id="logo">
-            <img src="./assets/logo.png" alt="" data-aos="fade-right">
+            <img src="./assets/Logo.png" alt="" data-aos="fade-right">
         </div>
         <div id="barraPesquisa" data-aos="zoom-in">
             <input id="pesquisa" placeholder="Pesquisar Pokémon">
