:tada: Projeto PokéAPI

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="./assets/icon-pesquisa.png" alt="" id="iconPesquisa">
             <img src="./assets/icon-fechar.png" alt="" id="iconFechar" style="display: none;">
         </div>
-        <div class="filtroPokemon">
+        <div class="filtroPokemon" data-aos="fade-left">
             <label class="textoEscolha" for="tipo">Filtrar por tipo:</label>
             <select id="selecionarTipo" name="tipo">
               <option value="None">None</option>
